--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css" />
+
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -14,6 +15,7 @@
         src="./assets/bowtie-cat.png"
         alt="Profile image of cat wearing a bow tie."
       />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -28,7 +30,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li></li>
+          <li>
             A margin indicates how much space we want around the outside of an
             element.
           </li>
@@ -58,5 +60,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
